# jan883-codebase

./: .cache.sqlite  .gitignore  Makefile  README.md  cache.sqlite.textClipping  calculator.py  helper883.py  helper883_to_divide.py  pyproject.toml  setup.py  streamlit_app.py
autogui/: auto1.py  index.html
automation/: automation_scheduler.py  browser_shotcut.py  icloud_email.py  image_renamer.py  news_automation.py  streamlit_apps_links.txt  weather_forcast.py
csv_to_database/: data.csv  main.ipynb
data_preprocessing/: eda.py  model_selection.py
git_automation/: git_merge.py  git_push.py
jupyter_nb/: eda.py  utils.py
llm/: crewai_websearch.py  groq.py  ollama.py  perplexity.py  utils.py
machine_l/: model_selection.py
notion_api/: notionhelper.py
src/jan883_codebase/NER/: ner.py
streamlit/: app.py
streamlit/.streamlit/: config.toml
telegram_api/: bot.py
test/: test_eda_0.py  test_eda_1.py
utils/: decorators.py  params.py
webscraping/: cleaned_text_20240928_022354.txt  scrape_website.py  website_content_https___bbc_co_uk.txt  website_content_https___biztoc_com.txt  website_content_https___docs_crewai_com.txt  website_content_https___docs_crewai_com_introduction.txt  website_content_https___docs_trychroma_com.txt  website_content_https___en_wikipedia_org_wiki_Main_Page.txt  website_content_https___janduplessis883_github_io_ToneTine_Docs_.txt  website_content_https___www_bbc_co_uk_news.txt  website_content_https___www_bbc_co_uk_news_live_cwyl9048gx8t.txt  website_content_https___www_bbc_co_uk_news_technology.txt
(+14 files in other folders)
